# templates

./: LICENSE  README.md  copier.yml
.devcontainer/: devcontainer.json  postCreateCommand.sh
data-science/: cookiecutter.json  copier.yml
data-science/[[ project_slug ]]/: .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  pyproject.toml
data-science/[[ project_slug ]]/.github/workflows/: ci.yml
data-science/[[ project_slug ]]/docs/: api.md  getting-started.md
data-science/[[ project_slug ]]/src/[[ module_name ]]/: __init__.py  dataset.py  features.py  plots.py
data-science/[[ project_slug ]]/src/[[ module_name ]]/modeling/: train.py
data-science/[[ repository_name ]]/: README.md  pyproject.toml
data-science/[[ repository_name ]]/docs/: getting-started.md
data-science/[[ repository_name ]]/src/[[ module_name ]]/modeling/: predict.py
data-science/{{ cookiecutter.package_name }}/: .env_sample  LICENSE  Makefile  README.md  pyproject.toml
data-science/{{ cookiecutter.package_name }}/.devcontainer/: devcontainer.json  postCreateCommand.sh
data-science/{{ cookiecutter.package_name }}/docs/source/: conf.py
data-science/{{ cookiecutter.package_name }}/src/: __init__.py
data-science/{{ cookiecutter.repository_name }}/: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
data-science/{{ cookiecutter.repository_name }}/docs/: api.md  getting-started.md  license.md
python-package/: cookiecutter.json  copier.yml
python-package/[[ project_slug ]]/: .gitignore  .markdownlint.json  Justfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
python-package/[[ project_slug ]]/.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
python-package/[[ project_slug ]]/.github/workflows/: lint.yml  release.yml  test.yml
python-package/[[ project_slug ]]/docs/: index.md
python-package/[[ repository_name ]]/: LICENSE  README.md  changelog.config.js  mkdocs.yml  pyproject.toml
python-package/[[ repository_name ]]/docs/: license.md
python-package/{{ cookiecutter.package_name }}/: .pre-commit-config.yaml  Makefile  README.md  poetry.toml  pyproject.toml
python-package/{{ cookiecutter.package_name }}/.devcontainer/: devcontainer.json  postCreateCommand.sh
python-package/{{ cookiecutter.package_name }}/.github/workflows/: codeql.yml  dependency-review.yml  lint.yml  test.yml
python-package/{{ cookiecutter.repository_name }}/: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
python-package/{{ cookiecutter.repository_name }}/.github/workflows/: lint.yml
python-package/{{ cookiecutter.repository_name }}/docs/: index.md
