[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "[[ project_slug ]]"
version = "0.1.0"
description = "[[ description ]]"
authors = [
    { name = "[[ author_name ]]", email = "[[ author_email ]]" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    # A list of PyPI classifiers that apply to your project. Check https://pypi.org/classifiers/.
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    {% if license == 'MIT' -%}
    "License :: OSI Approved :: MIT License",
    {% elif license == 'Apache-2.0' -%}
    "License :: OSI Approved :: Apache Software License",
    {% elif license == 'BSD-2-Clause' or license == 'BSD-3-Clause' -%}
    "License :: OSI Approved :: BSD License",
    {% elif license == 'Unlicense' -%}
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    {% endif -%}
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    {% set all_versions = ["3.11", "3.12", "3.13"] -%}
    {% set current_version_index = all_versions.index(python_version) -%}
    {% for version in all_versions[current_version_index:] -%}
    "Programming Language :: Python :: [[ version ]]",
    {% endfor -%}
    "Topic :: Software Development",
]
requires-python = ">=[[ python_version ]]"
dependencies = []

[project.urls]
# Homepage = "None"
# Documentation = "None"
# Source = "None"
# Issues = "None"
# Changelog = "None"

[dependency-groups]
dev = [
    "pre-commit",
]
lint = [
    "ruff",
    "bandit[toml]",
]
lab = [
    "jupyterlab",
    "ipywidgets",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings[python]",
]

[tool.ruff]
target-version = "py[[ python_version.replace('.', '') ]]"
extend-include = [".git", "notebooks", "references", "models", "data"]

[tool.bandit]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/[[ module_name ]]"]
