[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "[[ project_slug ]]"
version = "0.1.0"
description = "[[ description ]]"
authors = [
    { name = "[[ author_name ]]", email = "[[ author_email ]]" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    # A list of PyPI classifiers that apply to your project. Check https://pypi.org/classifiers/.
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    {% if license == 'MIT' -%}
    "License :: OSI Approved :: MIT License",
    {% elif license == 'Apache-2.0' -%}
    "License :: OSI Approved :: Apache Software License",
    {% elif license == 'BSD-2-Clause' or license == 'BSD-3-Clause' -%}
    "License :: OSI Approved :: BSD License",
    {% elif license == 'Unlicense' -%}
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    {% endif -%}
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    {% set all_versions = ["3.11", "3.12", "3.13"] -%}
    {% set current_version_index = all_versions.index(python_version) -%}
    {% for version in all_versions[current_version_index:] -%}
    "Programming Language :: Python :: [[ version ]]",
    {% endfor -%}
    "Topic :: Software Development",
]
requires-python = ">=[[ python_version ]]"
dependencies = []

[project.urls]
# Homepage = "None"
# Documentation = "None"
# Source = "None"
# Issues = "None"
# Changelog = "None"

[dependency-groups]
dev = [
    "pre-commit",
]
lint = [
    "bandit[toml]",
    "ruff",
]
docs = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings[python]",
]
lab = [
    "ipywidgets",
    "jupyterlab",
]

[tool.bandit]
skips = ["B101", "B601"]

[tool.ruff]
target-version = "py[[ python_version.replace('.', '') ]]"
extend-include = [".git", "notebooks", "references", "models", "data"]
line-length = 88

[tool.pytest.ini_options]
pythonpath = "src"
