[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "[[ repository_name ]]"
version = "0.1.0"
description = "[[ description ]]"
authors = [
    { name = "[[ author_name ]]", email = "[[ author_email ]]" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    # A list of PyPI classifiers that apply to your project. Check https://pypi.org/classifiers/.
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    {% if license == 'MIT' -%}
    "License :: OSI Approved :: MIT License",
    {% elif license == 'Apache-2.0' -%}
    "License :: OSI Approved :: Apache Software License",
    {% elif license == 'BSD-2-Clause' or license == 'BSD-3-Clause' -%}
    "License :: OSI Approved :: BSD License",
    {% elif license == 'GPL-2.0-only' -%}
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    {% elif license == 'GPL-3.0-only' -%}
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    {% elif license == 'LGPL-2.0' -%}
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    {% elif license == 'LGPL-2.1' -%}
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    {% elif license == 'LGPL-3.0' -%}
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    {% endif -%}
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    {% set all_versions = ["3.11", "3.12", "3.13"] -%}
    {% set current_version_index = all_versions.index(python_version) -%}
    {% for version in all_versions[current_version_index:] -%}
    "Programming Language :: Python :: [[ version ]]",
    {% endfor -%}
    "Topic :: Software Development",
]
requires-python = ">=[[ python_version ]]"
dependencies = []

[project.urls]
# Homepage = "None"
# Documentation = "None"
# Source = "None"
# Issues = "None"
# Changelog = "None"

[dependency-groups]
dev = [
    "pre-commit",
]
lint = [
    "ruff",
    "bandit[toml]",
]
lab = [
    "jupyterlab",
    "ipywidgets",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings[python]",
]

[tool.ruff]
target-version = "py[[ python_version.replace('.', '') ]]"
extend-include = [".git", "notebooks", "references", "models", "data"]

[tool.bandit]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/[[ module_name ]]"]
