[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.repository_name }}"
dynamic = ["version"]
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    # A list of PyPI classifiers that apply to your project. Check https://pypi.org/classifiers/.
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    {% if cookiecutter.license == 'MIT' -%}
    "License :: OSI Approved :: MIT License",
    {% elif cookiecutter.license == 'Apache-2.0' -%}
    "License :: OSI Approved :: Apache Software License",
    {% elif cookiecutter.license == 'BSD-2-Clause' or cookiecutter.license == 'BSD-3-Clause' -%}
    "License :: OSI Approved :: BSD License",
    {% elif cookiecutter.license == 'GPL-2.0-only' -%}
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    {% elif cookiecutter.license == 'GPL-3.0-only' -%}
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    {% elif cookiecutter.license == 'LGPL-2.0' -%}
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    {% elif cookiecutter.license == 'LGPL-2.1' -%}
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    {% elif cookiecutter.license == 'LGPL-3.0' -%}
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    {% endif -%}
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    {% set all_versions = ["3.9", "3.10", "3.11", "3.12", "3.13"] -%}
    {% set current_version_index = all_versions.index(cookiecutter.python_version) -%}
    {% for version in all_versions[current_version_index:] -%}
    "Programming Language :: Python :: {{ version }}",
    {% endfor -%}
    "Topic :: Software Development",
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[project.urls]
# Homepage = "None"
# Documentation = "None"
# Source = "None"
# Issues = "None"
# Changelog = "None"

[dependency-groups]
dev = [
    "pre-commit",
]
lint = [
    "ruff",
    "bandit[toml]",
]
lab = [
    "jupyterlab",
    "ipywidgets",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings[python]",
]

[tool.ruff]
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"
extend-include = [".git", "notebooks", "references", "models", "data"]

[tool.bandit]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"
