[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "0.0.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
# homepage = "None"
# repository = "None"
# documentation = "None"
include = [
    { path = "LICENSE", format = [
        "sdist",
        "wheel",
    ] },
    { path = "README.md", format = [
        "sdist",
        "wheel",
    ] },
]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ruff = "*"
bandit = { extras = ["toml"], version = "*" }
pre-commit = "*"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"

[tool.poetry-dynamic-versioning]
enable = true

[tool.ruff]
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"

[tool.bandit]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
